core/tests/integration/typecheck/fail/unsound_generalization_simple.ncl
# test.type = 'error'
# eval = 'typecheck'
#
# [test.metadata]
# error = 'TypecheckError::VarLevelMismatch'
#
# [test.metadata.expectation]
# type_var = 'a'
(fun x => let y : forall a. a = x in y) : _

